--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist=py26,py27,py31,py32,py33,py34,pypy,flake8
+envlist=py27,py36,pypy,flake8
 indexserver=
     default = https://pypi.python.org/simple
     testrun = http://pypi.testrun.org
