--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ jobs:
     deploy:
       provider: pypi
       on:
+        tags: true
         all_branches: true
         python: 3.6
       user: arttii
